--- a/music/.gitignore
+++ b/music/.gitignore
@@ -36,5 +36,6 @@ yarn-error.log*
 next-env.d.ts
 
 #scss
-music\styles\style.scss
-music\styles\style.css.map
+/styles/style.scss
+/styles/style.css.map
+
