--- a/music/package.json
+++ b/music/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "next": "14.1.0",
     "querystring": "^0.2.1",
