--- a/music/package.json
+++ b/music/package.json
@@ -17,6 +17,7 @@
     "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "use-sound": "^4.0.1"
   }
 }
