--- a/music/package.json
+++ b/music/package.json
@@ -9,15 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
     "next": "14.1.0",
-    "querystring": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18",
-    "request": "^2.88.2",
-    "use-sound": "^4.0.1"
+    "react-dom": "^18"
   }
 }
